commit next level changes

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
              <!-- say hello -->
              <a href="#" class="hey">say hello..!</a>
         </nav>
-        </section>
         <!-- content -->
-        <section id="home">
         <div class="content">
             <!-- model -->
             <div class="model">
@@ -57,34 +55,50 @@
         <!-- skills -->
        
         <section id="skills">
-        <div class="wrap">
-            <br><br><h1>My Skills</h1>
+            <div class="skill-heading">
+            <span></span></div>
+         <div class="wrap">
+            <h1>My Skills</h1>
             <div class="bar">
-                <h4>HTML</h4>
+                <div class="s-box-icon">1</div>
+                <div class="s-box-text">
+                <h4>HTML</h4></div>
                 <span></span>
             </div>
             <div class="bar">
-                <h4>CSS</h4>
+                <div class="s-box-icon">2</div>
+                <div class="s-box-text">
+                <h4>CSS</h4></div>
                 <span></span>
             </div>
             <div class="bar">
-                <h4>JAVASCRIPT</h4>
+                <div class="s-box-icon">3</div>
+                <div class="s-box-text">
+                <h4>JAVASCRIPT</h4></div>
                 <span></span>
             </div>
             <div class="bar">
-                <h4>C</h4>
+                <div class="s-box-icon">4</div>
+                <div class="s-box-text">
+                <h4>C</h4></div>
                 <span></span>
             </div>
             <div class="bar">
-                <h4>C++</h4>
+                <div class="s-box-icon">5</div>
+                <div class="s-box-text">
+                <h4>C++</h4></div>
                 <span></span>
             </div>
             <div class="bar">
-                <h4>JAVA</h4>
+                <div class="s-box-icon">6</div>
+                <div class="s-box-text">
+                <h4>JAVA</h4></div>
                 <span></span>
             </div>
-        
         </div>
+        <!-- <div class="skill-image">
+            <img src="./images/skills1.jfif">
+        </div> -->
         </section>
         <!-- </section> -->
         <!-- writing sample works -->
