final changes commit

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
             <!-- project 2 -->
             <div class="box2">
                <span>2</span>
-               <p class="heading">restaurant</p>
-               <p class="details">This contains a model restaurant website that i developed using front end</p>
-               <a href="./projects/restaurant.html"><button>click here</button></a>
+               <p class="heading">tribute website for abdul kalam</p>
+               <p class="details">this says about greatness of abdul kalam and the awards and books written by him</p>
+               <a href="./projects/assignment6-1.html"><button>click here</button></a>
             </div>
             <!-- project 3 -->
             <div class="box3">
