--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- project 2 -->
             <div class="box2">
                <span>2</span>
-               <p class="heading">tribute website for abdul kalam</p>
+               <p class="heading"> website for abdul kalam</p>
                <p class="details">this says about greatness of abdul kalam and the awards and books written by him</p>
                <a href="./projects/assignment6-1.html"><button>click here</button></a>
             </div>
