--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="skill-heading">
             <span></span></div>
          <div class="wrap">
-            <h1>My Skills</h1>
+            <br><br><br><h1>My Skills</h1>
             <div class="bar">
                 <div class="s-box-icon">1</div>
                 <div class="s-box-text">
