commit final level changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         <div class="main-text">
            <br><br><h1>Hello..!I am Kshithija Vennu</h1>
-            <p>I am a student  </p>
+            <p>I am a student and an enthusiastic learner who tries to give the best at all times </p>
             <!-- btn -->
             <a href="./cv/kshithija cv (1).pdf" download="cv"><button class="download-cv">download cv</button></a>
         <br><button class="portfolio-btn">See my portfolio</button>
